--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,5 @@ DB_PASSWORD=REPLACE_WITH_STRONG_PASSWORD
 # for password generation, i use:
 # openssl rand -base64 32 with command below
 # openssl rand -base64 24 | tr -d '=+/' | head -c 32;
+
+APP_ENV=development
